# ats

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  engine.py  graders.py  inference.py  models.py  openenv.yaml  planner.py  pyproject.toml  setup_groq_inference.sh  tasks.py  test_groq_inference.py
scripts/: benchmark_models.py  ping_env.py  pre_submission_validate.sh  run_graders.py  run_local_checklist.ps1
server/: __init__.py  app.py  atc_environment.py  ui_console.html  ui_runner.py
tests/: conftest.py  test_app_frontend.py  test_env.py
